# persist-mongo-template-old

./: ChangeLog.md  README.md  cabal.config  circle.yml  modelsMongo  mongoConfig.yml.example  persist-mongo-template.cabal
src/: ContentCfgTypes.hs  Main.hs  Mask.hs  Permissions.hs  SafeCopy.hs
src/ContentCfgTypes/: AngularGaugeConfigObj.hs  AutoReportConfigObj.hs  CustomTableConfigObj.hs  CustomTableIdConfigObj.hs  MultiParameterHistoryConfigObj.hs  MultiParameterHistoryReportConfigObj.hs  ParameterHistoryConfigObj.hs  RollingReportConfigIdObj.hs  StatusConfigObj.hs  TableByMultiLocConfigObj.hs  TankConfigObj.hs  TankGaugeConfigObj.hs  Util.hs
src/Mask/: BuiltIns.hs  Types.hs
src/Persist/Mongo/: Settings.hs
src/Util/: CalendarUtil.hs
test/: TestImport.hs
test/Persist/Mongo/: SettingsSpec.hs
