Name:                   persist-mongo-template
Version:                0.5.15
Author:                 Scott Murphy<scottmurphy09@gmail.com>   
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Plow version of persistent-mongo-template
Description:            The description
Cabal-Version:          >= 1.8
Build-Type:             Simple
data-files:             modelsMongo
Library
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Persist.Mongo.Settings
                        Persist.Mongo.Lens
                        SafeCopy
                        Mask
                        Mask.Types
                        Mask.BuiltIns
                        Util.CalendarUtil
                        Permissions
                        ContentCfgTypes                        
                        ContentCfgTypes.SplineConfigObj
                        ContentCfgTypes.Util
                        ContentCfgTypes.TankConfigObj
                        ContentCfgTypes.TankGaugeConfigObj
                        ContentCfgTypes.AngularGaugeConfigObj
                        ContentCfgTypes.AutoReportConfigObj
                        ContentCfgTypes.StatusConfigObj
                        ContentCfgTypes.ParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryReportConfigObj
                        ContentCfgTypes.TableByMultiLocConfigObj                        
                        ContentCfgTypes.TableByLocConfigObj
                        ContentCfgTypes.CustomTableConfigObj
                        ContentCfgTypes.CustomTableIdConfigObj
                        ContentCfgTypes.RollingReportConfigIdObj
  
                        WidgetTypes

  Other-Modules:        Persist.Mongo.Settings.Internal
  Build-Depends:         base                     >= 4  && < 5
                       , text                     >= 0.11.3.1  
                       , transformers             >= 0.3.0.0   
                       , lens                     >= 4.1.2     && < 4.4
                       , aeson                    >= 0.7.0.2   
                       , persistent-template      >= 1.3.1.4
                       , persistent-mongoDB       == 1.4.3  
                       , persistent               >= 1.3.1.1                       
                       , safecopy                 
                       , structured-script-lang   >= 0.1.6
                       , hashable                 
                       , cereal                   
                       , parsec                   
                       , containers               
                       , bytestring               >= 0.10.0.2
                       , time                     
                       , old-locale               
                       , unordered-containers     
                       , yaml                     
                       , network                  
                       , yesod-core               >= 1.2.17
                       , yesod                    
                       , template-haskell
                       , persist-types

                       

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       test
                        ,src
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , persist-mongo-template   
                      , persistent               
                      , hspec
                      , yaml                     
                      , text                     
                      , aeson                    
                      , yesod                                     
                      , time                     
                      , old-locale               
                      , parsec                   
                      , transformers             
                      , bytestring               
                      , template-haskell         
                      , network                  
                      , persistent-mongoDB       
                      , containers               
                      , unordered-containers     
                      , lens                     
                      , QuickCheck              

Executable persist-mongo-template
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                      , persist-mongo-template   
                      , persistent               
                      , yesod                    
                      , time                     
                      , old-locale               
                      , yaml                     
                      , text                     
                      , aeson                    
                      , parsec                   
                      , transformers             
                      , bytestring               
                      , template-haskell         
                      , network                  
                      , persistent-mongoDB       
                      , containers               
                      , unordered-containers     
                      , lens                     
                      , persist-types

    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/persist-mongo-template